@@ -854,6 +854,10 @@ argument material.  Most directives must be the first item of a line.
 
 A summary of the available directives follows:
 
+.IP @(eof)
+Explicitly match the end of file. Fails if unmatched data remains in
+the input stream.
+
 .IP @(next)
 Continue matching in another file.
 
